--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,43 @@
-# MCP Super Server Environment Configuration
-SERVER_HOST=localhost
+# Server Configuration
 SERVER_PORT=8080
+SERVER_HOST=localhost
 SERVER_ENVIRONMENT=development
 
-# PostgreSQL Database Configuration
+# Database Configuration
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_USER=mcpuser
-DATABASE_PASSWORD=mcppassword
-DATABASE_DBNAME=mcpserver
-DATABASE_SSLMODE=disable
+DATABASE_USER=samurai
+DATABASE_PASSWORD=samurai_password
+DATABASE_NAME=samurai_db
+DATABASE_SSL_MODE=disable
 DATABASE_MAX_OPEN_CONNS=25
 DATABASE_MAX_IDLE_CONNS=5
 
-# Logger Configuration
-LOGGER_LEVEL=debug
-LOGGER_FORMAT=console
-LOGGER_OUTPUT_PATH=stdout
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_ACCESS_TOKEN_EXPIRY=15m
+JWT_REFRESH_TOKEN_EXPIRY=7d
+JWT_ISSUER=samurai-mcp-server
 
-# Auth Configuration
-AUTH_JWT_SECRET=your-secret-key-change-in-production
-AUTH_TOKEN_DURATION=24
+# Security Configuration
+BCRYPT_COST=12
+PASSWORD_MIN_LENGTH=8
+
+# Rate Limiting
+RATE_LIMIT_REQUESTS=100
+RATE_LIMIT_WINDOW=1h
+RATE_LIMIT_BURST=10
+
+# Logging Configuration
+LOG_LEVEL=info
+LOG_FORMAT=json
+LOG_FILE_PATH=logs/app.log
+
+# Monitoring
+ENABLE_METRICS=true
+METRICS_PORT=9090
+
+# CORS Configuration
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080
+CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
+CORS_ALLOWED_HEADERS=Content-Type,Authorization,X-Requested-With
