--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 SERVER_HOST=localhost
 SERVER_PORT=8080
 SERVER_ENVIRONMENT=development
+SERVER_READ_TIMEOUT=30
+SERVER_WRITE_TIMEOUT=30
 
 # PostgreSQL Database Configuration
 DATABASE_HOST=localhost
@@ -13,11 +15,11 @@ DATABASE_SSLMODE=disable
 DATABASE_MAX_OPEN_CONNS=25
 DATABASE_MAX_IDLE_CONNS=5
 
-# Logger Configuration
-LOGGER_LEVEL=debug
-LOGGER_FORMAT=console
-LOGGER_OUTPUT_PATH=stdout
+# Logger Configuration (file-based only)
+LOGGER_LEVEL=info
+LOGGER_FORMAT=json
+LOGGER_OUTPUT_PATH=logs/app.log
 
 # Auth Configuration
-AUTH_JWT_SECRET=your-secret-key-change-in-production
-AUTH_TOKEN_DURATION=24
+AUTH_JWT_SECRET=your-secret-key-change-in-production-32-chars-min
+AUTH_TOKEN_DURATION=24h
